# Disarray

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  LICENSE  compile_both.sh  disarray.code-workspace  disarray.py  render_doc.cap
App/: CMakeLists.txt  imgui.ini  imgui_fullscreen.imi
App/Assets/DemoScenes/: TestPhysicsScene.json
App/Assets/Models/: .gitignore  arrow.mtl  cube.fbx  cube.mesh  sphere.fbx  sphere.mesh  sphere_optimal.fbx  textured_cube.fbx
App/Assets/Shaders/: aabb.frag  aabb.vert  basic_combined.glsl  cube.frag  cube.vert  fullscreen_quad.frag  fullscreen_quad.vert  glyph.frag  glyph.vert  glyph_billboard.vert  glyph_ss.frag  glyph_ss.vert  glyph_ws.frag  glyph_ws.vert  grid.frag  identity.frag  identity.vert  line.frag  line.vert  line_id.frag  line_id.vert  main.frag  main.vert  main_with_point.vert  point_light.frag  point_light.vert  quad.frag  quad.vert  shadow.frag  shadow.vert  shadow_combined.glsl  shadow_instances.vert  skybox.frag  skybox.vert  sponza.frag  sponza.vert  spot_light.vert  static_mesh.frag  static_mesh.vert  static_mesh_combined.glsl  (+2 more)
App/include/: Application.hpp  ClientLayer.hpp  MovingAverage.hpp
App/include/handlers/: file_handlers.inl
App/include/panels/: DirectoryContentPanel.hpp  ExecutionStatisticsPanel.hpp  LogPanel.hpp  PipelineEditorPanel.hpp  ScenePanel.hpp  StatisticsPanel.hpp
App/src/: Application.cpp  ClientLayer.cpp
App/src/panels/: DirectoryContentPanel.cpp  ExecutionStatisticsPanel.cpp  LogPanel.cpp  PipelineEditorPanel.cpp  ScenePanel.cpp  StatisticsPanel.cpp
Benchmarks/: CMakeLists.txt  main.cpp
Benchmarks/cases/: ModelLoader.hpp  PipelineCompiler.hpp
Engine/: CMakeLists.txt  Disarray.hpp
Engine/include/: DisarrayPCH.hpp  Forward.hpp
Engine/include/assets/: Asset.hpp  AssetType.hpp
Engine/include/core/: AllocatorConfigurator.hpp  App.hpp  CleanupAwaiter.hpp  Clock.hpp  Collections.hpp  Concepts.hpp  DataBuffer.hpp  DebugConfigurator.hpp  DisarrayObject.hpp  Ensure.hpp  Entry.hpp  FileWatcher.hpp  Formatters.hpp  Hashes.hpp  Input.hpp  Instrumentation.hpp  KeyCode.hpp  Layer.hpp  Log.hpp  MouseCode.hpp  Panel.hpp  Platform.hpp  PointerDefinition.hpp  PolymorphicCast.hpp  Random.hpp  ReferenceCounted.hpp  String.hpp  ThreadPool.hpp  Tuple.hpp  Types.hpp  UniquelyIdentifiable.hpp  UsageBadge.hpp  Window.hpp
Engine/include/graphics/: AABB.hpp  BufferProperties.hpp  BufferSet.hpp  CommandExecutor.hpp  Device.hpp  Extent.hpp  Framebuffer.hpp  GLM.hpp  Image.hpp  ImageLoader.hpp  ImageProperties.hpp  IndexBuffer.hpp  Instance.hpp  Material.hpp  MaterialTable.hpp  Maths.hpp  Mesh.hpp  MeshMaterial.hpp  ModelLoader.hpp  ModelVertex.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineCache.hpp  PushConstantLayout.hpp  PushContantLayout.hpp  QueueFamilyIndex.hpp  RenderBatch.hpp  RenderCommandQueue.hpp  RenderPass.hpp  Renderer.hpp  RendererProperties.hpp  ResourceCache.hpp  Shader.hpp  ShaderCompiler.hpp  SingleShader.hpp  StaticMesh.hpp  StorageBuffer.hpp  Surface.hpp  Swapchain.hpp  TextRenderer.hpp  (+7 more)
Engine/include/physics/: PhysicsEngine.hpp  PhysicsProperties.hpp
Engine/include/scene/: Camera.hpp  Component.hpp  ComponentSerialisers.hpp  Components.hpp  CppScript.hpp  Deserialiser.hpp  Entity.hpp  Scene.hpp  SceneRenderer.hpp  Scripts.hpp  SerialisationTypeConversions.hpp  Serialiser.hpp
Engine/include/ui/: InterfaceLayer.hpp  UI.hpp
Engine/include/util/: BitCast.hpp  FormattingUtilities.hpp  Timer.hpp
Engine/include/vulkan/: Allocator.hpp  BaseBuffer.hpp  CommandExecutor.hpp  Config.hpp  DebugMarker.hpp  Device.hpp  ExtensionSupport.hpp  Framebuffer.hpp  Image.hpp  ImageUtilities.hpp  IndexBuffer.hpp  Instance.hpp  Material.hpp  MemoryAllocator.hpp  Mesh.hpp  PhysicalDevice.hpp  Pipeline.hpp  PropertySupplier.hpp  QueueFamilyIndex.hpp  RenderBatch.hpp  RenderPass.hpp  Renderer.hpp  Shader.hpp  Structures.hpp  Surface.hpp  Swapchain.hpp  SwapchainUtilities.hpp  Texture.hpp  UniformBuffer.hpp  Verify.hpp  VertexBuffer.hpp  Window.hpp
Engine/src/core/: App.cpp  DataBuffer.cpp  FileWatcher.cpp  Formatters.cpp  Instrumentation.cpp  Layer.cpp  Log.cpp  ReferenceCounted.cpp  String.cpp  Types.cpp  Window.cpp
Engine/src/glfw/: GLFWClock.cpp  GLFWInput.cpp
Engine/src/graphics/: AABB.cpp  BufferSet.cpp  CommandExecutor.cpp  Device.cpp  Framebuffer.cpp  Image.cpp  ImageLoader.cpp  ImageProperties.cpp  IndexBuffer.cpp  Instance.cpp  Material.cpp  MaterialTable.cpp  Maths.cpp  Mesh.cpp  MeshMaterial.cpp  ModelLoader.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineCache.cpp  PushConstantLayout.cpp  QueueFamilyIndex.cpp  RenderCommandQueue.cpp  RenderPass.cpp  Renderer.cpp  RendererProperties.cpp  Shader.cpp  SingleShader.cpp  StaticMesh.cpp  StorageBuffer.cpp  Swapchain.cpp  Texture.cpp  UnifiedShader.cpp  UniformBuffer.cpp  UniformBufferSet.cpp  VertexBuffer.cpp
Engine/src/imgui/: ImGuiBackends.cpp  InterfaceLayer.cpp
Engine/src/linux/: UI.cpp
Engine/src/physics/: PhysicsEngine.cpp
Engine/src/scene/: Camera.cpp  ComponentDeserialisers.cpp  ComponentSerialisers.cpp  Components.cpp  CppScript.cpp  Deserialiser.cpp  Entity.cpp  Scene.cpp  SceneRenderer.cpp  Scripts.cpp  SerialisationTypeConversions.cpp  Serialiser.cpp
Engine/src/util/: FormattingUtilities.cpp
Engine/src/vulkan/: Allocator.cpp  BaseBuffer.cpp  CleanupAwaiter.cpp  CommandExecutor.cpp  DebugConfigurator.cpp  DebugMarker.cpp  Device.cpp  ExtensionSupport.cpp  Framebuffer.cpp  Image.cpp  ImageUtilities.cpp  IndependentCommandExecutor.cpp  IndexBuffer.cpp  Instance.cpp  Material.cpp  MemoryAllocator.cpp  Mesh.cpp  PhysicalDevice.cpp  Pipeline.cpp  QueueFamilyIndex.cpp  RenderBatchFor.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  Structures.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  UI.cpp  UniformBuffer.cpp  Verify.cpp  VertexBuffer.cpp  Window.cpp
Engine/src/windows/: UI.cpp
Engine/tests/: CMakeLists.txt  main.cpp
Engine/tests/graphics/: batch_renderer_test.cpp
Implementations/Vulkan/: CMakeLists.txt
Scripts/: disarray.py
(+135 files in other folders)
